syntax = "proto3";

message PersonCreate {
  int64 id = 1;
}