syntax = "proto3";

message HttpRequest {

}