syntax = "proto3";

message SaveName {
  string id = 1;
}